crates/reinhardt-pages/tests/ui/style/fail/direct_var.rs
use reinhardt_pages::{style_def};

#[style_def]
static STYLES: CardStyles = style! { .card { color: var(accent); } };
fn main() {}
